@@ -534,7 +534,8 @@ sub _parse_process_code {
 
         $comment ||= '';
 
-        $self->{parse}{makefile} =~ s/$comment//;
+        my $quoted_comment = quotemeta $comment;
+        $self->{parse}{makefile} =~ s/$quoted_comment//s; 
 
         my @comment;
 
@@ -908,7 +909,7 @@ sub _compose_header {
     my $note = '# Note: this file has been initially generated by ' . __PACKAGE__ . " $VERSION";
     my $pragmas = "use strict;\nuse warnings;\n";
 
-    # Warnings for chomp() & regular expressions when warnings enabled
+    # Warnings are thrown for chomp() & regular expressions when enabled
     no warnings 'uninitialized';
 
     if (defined $self->{make_code}{begin} || defined $self->{make_code}{end}) {
